# mindcanary

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  annotation-dialog.tsx  annotation.test.ts  annotation.ts  backup.test.ts  backup.ts  check-in.test.ts  check-in.ts  collection-controls.test.ts  collection-controls.ts  daemon-api.ts  data-controls.test.ts  data-controls.ts  dialog.tsx  index.ts  insights.test.ts  insights.ts  local-removal.test.ts  local-removal.ts  main.tsx  onboarding.test.ts  onboarding.ts  platform.test.ts  platform.ts  refresh.test.ts  refresh.ts  setup.test.ts  setup.ts  source-status.test.ts  source-status.ts  styles.css  timeline.test.ts  timeline.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  lifecycle.rs  main.rs
apps/extension/: eslint.config.js  extension-identity.test.ts  extension-identity.ts  firefox-identity.test.ts  firefox-identity.ts  manifest.base.json  package.json  popup.html  tsconfig.json  vite.config.ts
apps/extension/src/: collection-policy.test.ts  collection-policy.ts  env.d.ts  popup.css  popup.ts  queue.test.ts  queue.ts  reducer.test.ts  reducer.ts  scroll-context.test.ts  scroll-context.ts  scroll-observer.ts  service-worker.ts  status.test.ts  status.ts  tab-retention.test.ts  tab-retention.ts  uuid.ts
bins/daemon/: Cargo.toml
bins/daemon/src/: lib.rs  main.rs  os_activity.rs
bins/native-host/: Cargo.toml
bins/native-host/src/: lib.rs  main.rs
config/: chrome-extension-identities.json  firefox-extension-identities.json
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: os_keyring.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/: alpha-feedback.md  alpha-install.md  architecture.md  data-and-privacy.md  development-profiles.md  development.md  insight-evaluation.md  known-limitations.md  privacy-policy.md  roadmap.md  support.md  threat-model.md
fixtures/: synthetic-browser.jsonl  synthetic-check-ins.jsonl
scripts/: audit-local-removal-disposable.sh  backup-local-records.sh  check-fixtures.sh  check-linux-package.sh  check-protocol.sh  check.sh  launch-preflight.sh  prepare-desktop-bundle.sh  prepare-linux-alpha-release.sh  release-snapshot.sh  reliability-local.sh  smoke-stable-chrome-connection.sh  uninstall-local.sh  with-dev-profile.sh
