[workspace]
resolver = "2"
members = [
  "bins/daemon",
  "bins/native-host",
  "crates/analytics",
  "crates/client",
  "crates/protocol",
  "crates/storage",
  "crates/test-support",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
clap = { version = "4.5.40", features = ["derive"] }
getrandom = "0.3.3"
futures-util = "0.3.31"
keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust", "linux-native-sync-persistent", "vendored"] }
mindcanary-analytics = { path = "crates/analytics" }
mindcanary-client = { path = "crates/client" }
mindcanary-protocol = { path = "crates/protocol" }
mindcanary-storage = { path = "crates/storage" }
mindcanary-test-support = { path = "crates/test-support" }
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
zbus = { version = "=5.5.0", default-features = false, features = ["tokio"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
