[package]
name = "mindcanaryd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
getrandom.workspace = true
futures-util.workspace = true
mindcanary-analytics.workspace = true
mindcanary-protocol.workspace = true
mindcanary-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
zbus.workspace = true

[dev-dependencies]
mindcanary-test-support.workspace = true
tempfile.workspace = true

[lints]
workspace = true
