[package]
name = "mindcanary-native-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mindcanary-client.workspace = true
mindcanary-protocol.workspace = true
mindcanary-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
mindcanaryd = { path = "../daemon" }
tempfile.workspace = true

[lints]
workspace = true
