[package]
name = "mindcanary-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
mindcanary-protocol.workspace = true
mindcanary-storage.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
